[gd_scene load_steps=6 format=2]

[ext_resource path="res://Shared/classes/SaveableField.gd" type="Script" id=1]
[ext_resource path="res://popups/CreateCharacterPopup.gd" type="Script" id=2]
[ext_resource path="res://Character/Stat.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.254902, 0, 0.32549, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.227451, 0, 0.321569, 1 )

[node name="CreateCharacterPopup" type="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
type_options = NodePath("MarginContainer/Page1/VBox/type_options")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page1" type="ScrollContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
custom_styles/bg = SubResource( 1 )
scroll_horizontal_enabled = false

[node name="VBox" type="VBoxContainer" parent="MarginContainer/Page1"]
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="\'create a new character\'" type="Label" parent="MarginContainer/Page1/VBox"]
margin_top = 248.0
margin_right = 1004.0
margin_bottom = 269.0
text = "Create a new character"
align = 1
uppercase = true

[node name="type_options" type="OptionButton" parent="MarginContainer/Page1/VBox"]
margin_left = 468.0
margin_top = 273.0
margin_right = 535.0
margin_bottom = 300.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "None"
items = [ "None", null, false, 0, null ]
selected = 0

[node name="CreateNewPlaybook" type="Button" parent="MarginContainer/Page1/VBox"]
margin_left = 479.0
margin_top = 304.0
margin_right = 524.0
margin_bottom = 331.0
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
text = "Next"

[node name="Page2" type="ScrollContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
custom_styles/bg = SubResource( 1 )
scroll_horizontal_enabled = false

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Page2"]
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 15
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5

[node name="\'create a new character\'" type="Label" parent="MarginContainer/Page2/MarginContainer"]
margin_left = 10.0
margin_top = 15.0
margin_right = 994.0
margin_bottom = 36.0
size_flags_vertical = 0
text = "Create a new character"
align = 1
uppercase = true

[node name="VBox" type="VBoxContainer" parent="MarginContainer/Page2/MarginContainer"]
margin_left = 10.0
margin_top = 15.0
margin_right = 994.0
margin_bottom = 575.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="label" type="Label" parent="MarginContainer/Page2/MarginContainer/VBox"]
margin_top = 118.0
margin_right = 984.0
margin_bottom = 139.0
text = "Basic Info:"
uppercase = true

[node name="Field" type="HBoxContainer" parent="MarginContainer/Page2/MarginContainer/VBox"]
margin_top = 143.0
margin_right = 984.0
margin_bottom = 174.0

[node name="Label" type="Label" parent="MarginContainer/Page2/MarginContainer/VBox/Field"]
margin_top = 5.0
margin_right = 52.0
margin_bottom = 26.0
text = "name: "
uppercase = true

[node name="name" type="LineEdit" parent="MarginContainer/Page2/MarginContainer/VBox/Field"]
margin_left = 56.0
margin_right = 206.0
margin_bottom = 31.0
rect_min_size = Vector2( 150, 0 )
expand_to_text_length = true
placeholder_text = "Character Name"
script = ExtResource( 1 )

[node name="Field2" type="HBoxContainer" parent="MarginContainer/Page2/MarginContainer/VBox"]
margin_top = 178.0
margin_right = 984.0
margin_bottom = 209.0

[node name="Label" type="Label" parent="MarginContainer/Page2/MarginContainer/VBox/Field2"]
margin_top = 5.0
margin_right = 44.0
margin_bottom = 26.0
text = "alias:"
uppercase = true

[node name="aliases" type="LineEdit" parent="MarginContainer/Page2/MarginContainer/VBox/Field2"]
margin_left = 48.0
margin_right = 198.0
margin_bottom = 31.0
rect_min_size = Vector2( 150, 0 )
expand_to_text_length = true
placeholder_text = "Aliases"
script = ExtResource( 1 )

[node name="Field3" type="HBoxContainer" parent="MarginContainer/Page2/MarginContainer/VBox"]
margin_top = 213.0
margin_right = 984.0
margin_bottom = 313.0

[node name="Label" type="Label" parent="MarginContainer/Page2/MarginContainer/VBox/Field3"]
margin_top = 39.0
margin_right = 43.0
margin_bottom = 60.0
text = "Look:"
uppercase = true

[node name="look" type="TextEdit" parent="MarginContainer/Page2/MarginContainer/VBox/Field3"]
margin_left = 47.0
margin_right = 447.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 100 )
script = ExtResource( 1 )

[node name="Field4" type="HBoxContainer" parent="MarginContainer/Page2/MarginContainer/VBox"]
margin_top = 317.0
margin_right = 984.0
margin_bottom = 344.0

[node name="Label" type="Label" parent="MarginContainer/Page2/MarginContainer/VBox/Field4"]
margin_top = 3.0
margin_right = 74.0
margin_bottom = 24.0
text = "Heritage:"
uppercase = true

[node name="heritage" type="OptionButton" parent="MarginContainer/Page2/MarginContainer/VBox/Field4"]
margin_left = 78.0
margin_right = 155.0
margin_bottom = 27.0
text = "Akoros"
items = [ "Akoros", null, false, 0, null, "The Dagger Isles", null, false, 1, null, "Iruvia", null, false, 2, null, "Severos", null, false, 3, null, "Skovlan", null, false, 4, null, "Tycheros", null, false, 5, null ]
selected = 0
script = ExtResource( 1 )

[node name="Field5" type="HBoxContainer" parent="MarginContainer/Page2/MarginContainer/VBox"]
margin_top = 348.0
margin_right = 984.0
margin_bottom = 375.0

[node name="Label" type="Label" parent="MarginContainer/Page2/MarginContainer/VBox/Field5"]
margin_top = 3.0
margin_right = 106.0
margin_bottom = 24.0
text = "Background:"
uppercase = true

[node name="background2" type="OptionButton" parent="MarginContainer/Page2/MarginContainer/VBox/Field5"]
margin_left = 110.0
margin_right = 208.0
margin_bottom = 27.0
text = "Academic"
items = [ "Academic", null, false, 0, null, "Labor", null, false, 1, null, "Law", null, false, 2, null, "Trade", null, false, 3, null, "Military", null, false, 4, null, "Noble", null, false, 5, null, "Underworld", null, false, 6, null ]
selected = 0
script = ExtResource( 1 )

[node name="Field6" type="HBoxContainer" parent="MarginContainer/Page2/MarginContainer/VBox"]
margin_top = 379.0
margin_right = 984.0
margin_bottom = 410.0

[node name="Label" type="Label" parent="MarginContainer/Page2/MarginContainer/VBox/Field6"]
margin_top = 5.0
margin_right = 37.0
margin_bottom = 26.0
text = "Vice:"
uppercase = true

[node name="vice" type="LineEdit" parent="MarginContainer/Page2/MarginContainer/VBox/Field6"]
margin_left = 41.0
margin_right = 191.0
margin_bottom = 31.0
rect_min_size = Vector2( 150, 0 )
expand_to_text_length = true
placeholder_text = "Specific Vice"
script = ExtResource( 1 )

[node name="Label2" type="Label" parent="MarginContainer/Page2/MarginContainer/VBox/Field6"]
margin_left = 195.0
margin_top = 5.0
margin_right = 271.0
margin_bottom = 26.0
text = "Vice Type:"
uppercase = true

[node name="vice_type" type="OptionButton" parent="MarginContainer/Page2/MarginContainer/VBox/Field6"]
margin_left = 275.0
margin_right = 339.0
margin_bottom = 31.0
text = "Faith"
items = [ "Faith", null, false, 0, null, "Gambling", null, false, 1, null, "Luxury", null, false, 2, null, "Obligation", null, false, 3, null, "Pleasure", null, false, 4, null, "Stupor", null, false, 5, null, "Weird", null, false, 6, null ]
selected = 0
script = ExtResource( 1 )

[node name="NextButton2" type="Button" parent="MarginContainer/Page2/MarginContainer/VBox"]
margin_left = 469.0
margin_top = 414.0
margin_right = 514.0
margin_bottom = 441.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Next"

[node name="Page3" type="ScrollContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
custom_styles/bg = SubResource( 1 )
scroll_horizontal_enabled = false

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Page3"]
margin_right = 1004.0
margin_bottom = 511.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 15
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5

[node name="VBox" type="VBoxContainer" parent="MarginContainer/Page3/MarginContainer"]
margin_left = 10.0
margin_top = 15.0
margin_right = 994.0
margin_bottom = 506.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="title" type="Label" parent="MarginContainer/Page3/MarginContainer/VBox"]
margin_right = 984.0
margin_bottom = 21.0
size_flags_vertical = 1
text = "Assign Starting Stats "
align = 1
uppercase = true

[node name="title2" type="Label" parent="MarginContainer/Page3/MarginContainer/VBox"]
margin_top = 25.0
margin_right = 984.0
margin_bottom = 46.0
size_flags_vertical = 1
text = "(Add 3 points, no stat can be above 2 total)"
align = 1

[node name="StatsContainer" type="VBoxContainer" parent="MarginContainer/Page3/MarginContainer/VBox"]
margin_top = 50.0
margin_right = 984.0
margin_bottom = 460.0
custom_constants/separation = 25

[node name="insight" parent="MarginContainer/Page3/MarginContainer/VBox/StatsContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 984.0
margin_bottom = 120.0
stat_name = "Insight"
substats = [ "Hunt", "Study", "Survey", "Tinker" ]

[node name="prowess" parent="MarginContainer/Page3/MarginContainer/VBox/StatsContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 145.0
margin_right = 984.0
margin_bottom = 265.0

[node name="resolve" parent="MarginContainer/Page3/MarginContainer/VBox/StatsContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 290.0
margin_right = 984.0
margin_bottom = 410.0
stat_name = "Resolve"
substats = [ "Attune", "Command", "Consort", "Sway" ]

[node name="FinishButton" type="Button" parent="MarginContainer/Page3/MarginContainer/VBox"]
margin_left = 456.0
margin_top = 464.0
margin_right = 527.0
margin_bottom = 491.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Finished"

[connection signal="item_selected" from="MarginContainer/Page1/VBox/type_options" to="." method="_on_type_options_item_selected"]
[connection signal="pressed" from="MarginContainer/Page1/VBox/CreateNewPlaybook" to="." method="_on_CreateNewPlaybook_pressed"]
[connection signal="pressed" from="MarginContainer/Page2/MarginContainer/VBox/NextButton2" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="MarginContainer/Page3/MarginContainer/VBox/FinishButton" to="." method="_on_FinishButton_pressed"]
